--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #\u7981\u7528\u7F13\u5B58
 spring.thymeleaf.cache=false
 
+#\u65E5\u671F\u683C\u5F0F\u5316
+spring.mvc.date-format=yyyy-MM-dd
+
 #\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\uFF08\u5305\u540D\uFF0C\u57FA\u7840\u540D\uFF09
 spring.messages.basename=i18n.login
