--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
+server.port=8081
+
+#\u9879\u76EE\u8BBF\u95EE\u8DEF\u5F84
+server.servlet.context-path=/crud
+
 #\u7981\u7528\u7F13\u5B58
 spring.thymeleaf.cache=false
+
+server.tomcat.uri-encoding=UTF-8
 
 #\u65E5\u671F\u683C\u5F0F\u5316
 spring.mvc.date-format=yyyy-MM-dd
 
 #\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\uFF08\u5305\u540D\uFF0C\u57FA\u7840\u540D\uFF09
 spring.messages.basename=i18n.login
+
+server.error.include-exception=true
